website/versioned_docs/version-0.0.6/api/core/core.md
---
id: "version-0.0.6-core"
title: "core package"
hide_title: true
original_id: "core"
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Core API Overview](overview) &gt; [@adpt/core](./core.md)

## core package

## Classes

|  Class | Description |
|  --- | --- |
|  [BuildNotImplemented](./core.buildnotimplemented.md) |  |
|  [Component](./core.component.md) |  |
|  [DeferredComponent](./core.deferredcomponent.md) |  |
|  [Observer](./core.observer.md) |  |
|  [ObserverNeedsData](./core.observerneedsdata.md) |  |
|  [PrimitiveComponent](./core.primitivecomponent.md) |  |
|  [ProjectBuildError](./core.projectbuilderror.md) |  |
|  [ProjectCompileError](./core.projectcompileerror.md) |  |
|  [ProjectRunError](./core.projectrunerror.md) |  |
|  [Rule](./core.rule.md) |  |
|  [Style](./core.style.md) |  |

## Functions

|  Function | Description |
|  --- | --- |
|  [build(root, styles, options)](./core.build.md) |  |
|  [buildOnce(root, styles, options)](./core.buildonce.md) |  |
|  [callInstanceMethod(hand, def, methodName, args)](./core.callinstancemethod.md) | <b><i>(BETA)</i></b> Immediately call method on instance pointed to by handle |
|  [callNextInstanceMethod(hand, def, methodName, args)](./core.callnextinstancemethod.md) | <b><i>(BETA)</i></b> Immediately call a method on the successor instance of the one pointed to by handle. |
|  [childrenToArray(propsChildren)](./core.childrentoarray.md) |  |
|  [cloneElement(element, props, children)](./core.cloneelement.md) |  |
|  [concatStyles(styles)](./core.concatstyles.md) | Concatenate all of the rules of the given Style elements together into a single Style element that contains all of the rules. Always returns a new Style element and does not modify the Style element parameters. |
|  [createContext(defaultValue)](./core.createcontext.md) |  |
|  [createElement(ctor, props, children)](./core.createelement.md) |  |
|  [createStateStore(json)](./core.createstatestore.md) |  |
|  [deepFilterElemsToPublic(o)](./core.deepfilterelemstopublic.md) |  |
|  [defaultChildStatus(props, mgr, data)](./core.defaultchildstatus.md) |  |
|  [errorToNoStatus(err)](./core.errortonostatus.md) |  |
|  [findElementsInDom(stylesIn, dom)](./core.findelementsindom.md) |  |
|  [findPathsInDom(stylesIn, dom)](./core.findpathsindom.md) |  |
|  [gqlGetOriginalErrors(err)](./core.gqlgetoriginalerrors.md) |  |
|  [handle(name)](./core.handle.md) | User-facing API for creating a Handle |
|  [hasInstanceMethod(name, skip)](./core.hasinstancemethod.md) |  |
|  [isApplyStyle(el)](./core.isapplystyle.md) |  |
|  [isDefaultKey(props)](./core.isdefaultkey.md) |  |
|  [isDeferredElement(val)](./core.isdeferredelement.md) |  |
|  [isElement(val)](./core.iselement.md) |  |
|  [isHandle(val)](./core.ishandle.md) |  |
|  [isMountedElement(val)](./core.ismountedelement.md) |  |
|  [isMountedPrimitiveElement(elem)](./core.ismountedprimitiveelement.md) |  |
|  [isPrimitiveElement(elem)](./core.isprimitiveelement.md) |  |
|  [isReady(h, e)](./core.isready.md) |  |
|  [mergeDefaultChildStatus(props, parentStatus, mgr, data, transformParentStatus)](./core.mergedefaultchildstatus.md) |  |
|  [noStatusOnError(f)](./core.nostatusonerror.md) |  |
|  [noTransform(val)](./core.notransform.md) |  |
|  [registerObserver(obs, nameIn)](./core.registerobserver.md) |  |
|  [rule(override)](./core.rule.md) |  |
|  [ruleNoRematch(info, elem)](./core.rulenorematch.md) | Marks an element returned by a style rule to not rematch that rule. |
|  [serializeDom(root, options)](./core.serializedom.md) |  |
|  [stack(stackName, root, style)](./core.stack.md) |  |
|  [throwObserverErrors(results)](./core.throwobservererrors.md) |  |
|  [useAsync(f, initial)](./core.useasync.md) |  |
|  [useBuildHelpers()](./core.usebuildhelpers.md) |  |
|  [useContext(context)](./core.usecontext.md) |  |
|  [useDependsOn(f)](./core.usedependson.md) |  |
|  [useDeployedWhen(f)](./core.usedeployedwhen.md) |  |
|  [useImperativeMethods(create)](./core.useimperativemethods.md) |  |
|  [useInstanceValue(hand, initial, field)](./core.useinstancevalue.md) | <b><i>(BETA)</i></b> Get the value of field from the instance referenced by handled instance. |
|  [useMethod(hand, method)](./core.usemethod.md) | <b><i>(BETA)</i></b> Call an instance method on the Element that <code>hand</code> refers to. |
|  [useMethod(hand, initial, method, args)](./core.usemethod_1.md) | <b><i>(BETA)</i></b> |
|  [useMethod(hand, method)](./core.usemethod_2.md) | <b><i>(BETA)</i></b> |
|  [useMethod(hand, initial, method, args)](./core.usemethod_3.md) | <b><i>(BETA)</i></b> |
|  [useMethodFrom(hand, methodName, defaultVal, args)](./core.usemethodfrom.md) |  |
|  [useReadyFrom(targetHand)](./core.usereadyfrom.md) |  |
|  [useState(init)](./core.usestate.md) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [AdaptDeferredElement](./core.adaptdeferredelement.md) |  |
|  [AdaptElement](./core.adaptelement.md) | An Adapt Element is an instance of an Adapt component. |
|  [AdaptMountedElement](./core.adaptmountedelement.md) |  |
|  [AdaptMountedPrimitiveElement](./core.adaptmountedprimitiveelement.md) |  |
|  [AdaptPrimitiveElement](./core.adaptprimitiveelement.md) |  |
|  [AnyMethods](./core.anymethods.md) |  |
|  [AnyProps](./core.anyprops.md) |  |
|  [AnyState](./core.anystate.md) |  |
|  [BuildData](./core.builddata.md) |  |
|  [BuildHelpers](./core.buildhelpers.md) |  |
|  [BuildId](./core.buildid.md) |  |
|  [BuildOptions](./core.buildoptions.md) |  |
|  [BuildOutputBase](./core.buildoutputbase.md) |  |
|  [BuildOutputError](./core.buildoutputerror.md) |  |
|  [BuildOutputPartial](./core.buildoutputpartial.md) |  |
|  [BuildOutputSuccess](./core.buildoutputsuccess.md) |  |
|  [BuiltinProps](./core.builtinprops.md) |  |
|  [Children](./core.children.md) |  |
|  [ClassComponentTyp](./core.classcomponenttyp.md) |  |
|  [ComponentStatic](./core.componentstatic.md) |  |
|  [ConsumerProps](./core.consumerprops.md) |  |
|  [Context](./core.context.md) |  |
|  [DeferredClassComponentTyp](./core.deferredclasscomponenttyp.md) |  |
|  [DeployInfo](./core.deployinfo.md) |  |
|  [ElementKey](./core.elementkey.md) |  |
|  [ExecutedQuery](./core.executedquery.md) |  |
|  [FunctionComponentTyp](./core.functioncomponenttyp.md) |  |
|  [GenericInstance](./core.genericinstance.md) |  |
|  [GenericInstanceMethods](./core.genericinstancemethods.md) |  |
|  [Handle](./core.handle.md) |  |
|  [NoStatus](./core.nostatus.md) |  |
|  [ObserverManagerDeployment](./core.observermanagerdeployment.md) |  |
|  [ObserverNameHolder](./core.observernameholder.md) |  |
|  [ObserverPlugin](./core.observerplugin.md) |  |
|  [ObserverProps](./core.observerprops.md) |  |
|  [ObserverResponse](./core.observerresponse.md) |  |
|  [PrimitiveClassComponentTyp](./core.primitiveclasscomponenttyp.md) |  |
|  [ProviderProps](./core.providerprops.md) |  |
|  [SerializeOptions](./core.serializeoptions.md) |  |
|  [SFC](./core.sfc.md) |  |
|  [StateStore](./core.statestore.md) |  |
|  [Status](./core.status.md) |  |
|  [StyleBuildInfo](./core.stylebuildinfo.md) | Informational object provided to the callback of a [rule()](./core.rule.md)<!-- -->. |
|  [StyleProps](./core.styleprops.md) |  |
|  [StyleRule](./core.stylerule.md) |  |
|  [Variables](./core.variables.md) |  |
|  [WithChildren](./core.withchildren.md) |  |

## Namespaces

|  Namespace | Description |
|  --- | --- |
|  [Adapt](./core.adapt.md) |  |
|  [internal](./core.internal.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [gql](./core.gql.md) |  |
|  [isFinalDomElement](./core.isfinaldomelement.md) |  |
|  [isPartialFinalDomElement](./core.ispartialfinaldomelement.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [AbstractComponentCtor](./core.abstractcomponentctor.md) |  |
|  [AdaptComponentConstructor](./core.adaptcomponentconstructor.md) |  |
|  [AdaptElementOrNull](./core.adaptelementornull.md) |  |
|  [BuildOutput](./core.buildoutput.md) |  |
|  [BuildOverride](./core.buildoverride.md) |  |
|  [ChildType](./core.childtype.md) |  |
|  [ComponentType](./core.componenttype.md) |  |
|  [Consumer](./core.consumer.md) |  |
|  [DeployOpID](./core.deployopid.md) |  |
|  [DomPath](./core.dompath.md) |  |
|  [ElementID](./core.elementid.md) |  |
|  [ElementPredicate](./core.elementpredicate.md) |  |
|  [FinalDomElement](./core.finaldomelement.md) |  |
|  [HandleInstanceType](./core.handleinstancetype.md) | Extracts the instance type associated with a [Handle](./core.handle.md)<!-- -->. |
|  [HookStateUpdater](./core.hookstateupdater.md) |  |
|  [KeyPath](./core.keypath.md) |  |
|  [ObserveForStatus](./core.observeforstatus.md) |  |
|  [PartialFinalDomElement](./core.partialfinaldomelement.md) |  |
|  [PrimitiveChildType](./core.primitivechildtype.md) |  |
|  [ProcessStateUpdates](./core.processstateupdates.md) |  |
|  [PropsType](./core.propstype.md) |  |
|  [Provider](./core.provider.md) |  |
|  [SetState](./core.setstate.md) |  |
|  [SFCBuildProps](./core.sfcbuildprops.md) | Helper type for declaring the props available to use \*\*inside\*\* the body of your function component. |
|  [SFCDeclProps](./core.sfcdeclprops.md) | Helper type for declaring the props argument of a function component. (The type that users of your component will see.) |
|  [StateNamespace](./core.statenamespace.md) |  |
|  [StateUpdater](./core.stateupdater.md) |  |
|  [StyleList](./core.stylelist.md) | An array of [StyleRule](./core.stylerule.md)<!-- -->s |
|  [UseStateInit](./core.usestateinit.md) |  |
